languages/html/umc_html_parser/src/snapshots/umc_html__parse__test__attribute_with_whitespaces.snap
---
source: languages/html/umc_html_parser/src/parse.rs
expression: parse(HTML)
---
Nodes: Vec(
    [
        Element(
            Element {
                span: Span {
                    start: 0,
                    end: 40,
                },
                tag_name: "div",
                attributes: Vec(
                    [
                        Attribute {
                            span: Span {
                                start: 5,
                                end: 19,
                            },
                            key: AttributeKey {
                                span: Span {
                                    start: 5,
                                    end: 10,
                                },
                                value: "class",
                            },
                            value: Some(
                                AttributeValue {
                                    span: Span {
                                        start: 13,
                                        end: 19,
                                    },
                                    value: "test",
                                    raw: "\"test\"",
                                },
                            ),
                        },
                        Attribute {
                            span: Span {
                                start: 20,
                                end: 26,
                            },
                            key: AttributeKey {
                                span: Span {
                                    start: 20,
                                    end: 21,
                                },
                                value: "a",
                            },
                            value: Some(
                                AttributeValue {
                                    span: Span {
                                        start: 23,
                                        end: 26,
                                    },
                                    value: "b",
                                    raw: "\"b\"",
                                },
                            ),
                        },
                    ],
                ),
                children: Vec(
                    [
                        Text(
                            Text {
                                span: Span {
                                    start: 27,
                                    end: 34,
                                },
                                value: "Content",
                            },
                        ),
                    ],
                ),
            },
        ),
    ],
)
Errors: []
